[style] remove background attachment fixed on mobile (due to performance)

--- a/assets/scss/layouts/_l-header.scss
+++ b/assets/scss/layouts/_l-header.scss
@@ -71,7 +71,6 @@
     background-image: linear-gradient($site-header-overlay-color, $site-header-overlay-color),
       url(/assets/video/bassmovie_x264_poster.jpeg);
     background-size: cover;
-    background-attachment: fixed;
   }
 
   .c-header-content {
